[gd_scene load_steps=3 format=3 uid="uid://puavol4fknwn"]

[ext_resource type="Script" path="res://scripts/base_level.gd" id="1_wvhy0"]
[ext_resource type="Script" path="res://scripts/draw_canvas.gd" id="2_el6v5"]

[node name="BaseLevel" type="Node2D"]
script = ExtResource("1_wvhy0")

[node name="background" type="MeshInstance2D" parent="."]

[node name="grid_container" type="Node2D" parent="."]

[node name="obstacle_container" type="Node2D" parent="."]

[node name="draw_canvas" type="Node2D" parent="."]
script = ExtResource("2_el6v5")

[node name="flow_container" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
text = "0"

[node name="cursor_snap" type="Node2D" parent="."]
modulate = Color(0.853352, 0.342064, 0.394375, 1)
scale = Vector2(0.25, 0.25)

[node name="cursor_clock" type="Node2D" parent="."]
modulate = Color(0.853352, 0.342064, 0.394375, 1)
scale = Vector2(0.25, 0.25)
